deploy/cache/valkey.yaml
# Copyright (c) 2026 Adam Ousmer. All rights reserved.
# Proprietary. No license granted. See LICENSE.md.

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: node
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  name: valkey
  namespace: cache
spec:
  trafficDistribution: PreferSameNode
  ports:
  - name: tls-redis
    port: 6380
    protocol: TCP
    targetPort: redis-tls
  - name: tls-sentinel
    port: 26380
    protocol: TCP
    targetPort: sentinel-tls
  selector:
    app.kubernetes.io/component: node
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: node
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  name: valkey-local
  namespace: cache
spec:
  internalTrafficPolicy: Local
  ports:
  - name: tls-redis
    port: 6380
    protocol: TCP
    targetPort: redis-tls
  selector:
    app.kubernetes.io/component: node
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  name: valkey-headless
  namespace: cache
spec:
  ports:
  - name: redis-tls
    port: 6380
    protocol: TCP
    targetPort: redis-tls
  - name: sentinel-tls
    port: 26380
    protocol: TCP
    targetPort: sentinel-tls
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: node
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    itsbagelbot.dev/valkey-partitioning: disabled
    itsbagelbot.dev/valkey-topology: sentinel-single-primary
  labels:
    app.kubernetes.io/component: node
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/name: valkey
  name: valkey-node
  namespace: cache
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: Parallel
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: node
      app.kubernetes.io/instance: valkey
      app.kubernetes.io/name: valkey
  serviceName: valkey-headless
  template:
    metadata:
      annotations:
        secrets.doppler.com/reload: 'true'
      labels:
        app.kubernetes.io/component: node
        app.kubernetes.io/instance: valkey
        app.kubernetes.io/name: valkey
    spec:
      dnsConfig:
        options:
          - {name: ndots, value: "1"}
          - {name: single-request-reopen}
          - {name: timeout, value: "1"}
          - {name: attempts, value: "3"}
      priorityClassName: bagel-data-plane
      containers:
      - command:
        - valkey-server
        - /data/valkey.conf
        - --replica-announce-ip
        - $(POD_NAME).valkey-headless.cache.svc.cluster.local
        - --replica-announce-port
        - "6380"
        - --masterauth
        - $(CORE)
        - --cluster-enabled
        - "no"
        - --replica-read-only
        - "yes"
        - --maxmemory-policy
        - volatile-lru
        - --port
        - "0"
        - --tls-port
        - "6380"
        - --tls-cert-file
        - /etc/valkey/tls/tls.crt
        - --tls-key-file
        - /etc/valkey/tls/tls.key
        - --tls-ca-cert-file
        - /etc/valkey/tls/ca.crt
        - --tls-auth-clients
        - "yes"
        - --tls-replication
        - "yes"
        image: valkey/valkey@sha256:3acc0687f2a2e1091fae6450d7842dd658c941338cf0a873ddd9e14b9e4ea4dd
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - valkey-cli
            - -s
            - /data/valkey.sock
            - ping
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: valkey
        ports:
        - containerPort: 6380
          name: redis-tls
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - valkey-cli
            - -s
            - /data/valkey.sock
            - ping
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        startupProbe:
          exec:
            command:
            - valkey-cli
            - -s
            - /data/valkey.sock
            - ping
          failureThreshold: 30
          periodSeconds: 2
          timeoutSeconds: 3
        resources:
          limits:
            cpu: '6'
            memory: 3Gi
          requests:
            cpu: 250m
            memory: 384Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 999
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: valkey-data
        - mountPath: /secrets/users
          name: users-secret
          readOnly: true
        - mountPath: /config
          name: valkey-config
          readOnly: true
        - mountPath: /etc/valkey/tls
          name: valkey-tls
          readOnly: true
      - command:
        - valkey-server
        - /data/sentinel.conf
        - --sentinel
        - --port
        - "0"
        - --tls-port
        - "26380"
        - --tls-cert-file
        - /etc/valkey/tls/tls.crt
        - --tls-key-file
        - /etc/valkey/tls/tls.key
        - --tls-ca-cert-file
        - /etc/valkey/tls/ca.crt
        - --tls-auth-clients
        - "yes"
        - --tls-replication
        - "yes"
        image: valkey/valkey@sha256:3acc0687f2a2e1091fae6450d7842dd658c941338cf0a873ddd9e14b9e4ea4dd
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - valkey-cli
            - -p
            - "26380"
            - --tls
            - --cacert
            - /etc/valkey/tls/ca.crt
            - --cert
            - /etc/valkey/tls/tls.crt
            - --key
            - /etc/valkey/tls/tls.key
            - --sni
            - valkey.cache.svc.cluster.local
            - ping
          failureThreshold: 6
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: sentinel
        ports:
        - containerPort: 26380
          name: sentinel-tls
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - valkey-cli
            - -p
            - "26380"
            - --tls
            - --cacert
            - /etc/valkey/tls/ca.crt
            - --cert
            - /etc/valkey/tls/tls.crt
            - --key
            - /etc/valkey/tls/tls.key
            - --sni
            - valkey.cache.svc.cluster.local
            - ping
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        startupProbe:
          exec:
            command:
            - valkey-cli
            - -p
            - "26380"
            - --tls
            - --cacert
            - /etc/valkey/tls/ca.crt
            - --cert
            - /etc/valkey/tls/tls.crt
            - --key
            - /etc/valkey/tls/tls.key
            - --sni
            - valkey.cache.svc.cluster.local
            - ping
          failureThreshold: 30
          periodSeconds: 2
          timeoutSeconds: 3
        resources:
          limits:
            cpu: '1'
            memory: 64Mi
          requests:
            cpu: 100m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 999
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: valkey-data
        - mountPath: /etc/valkey/tls
          name: valkey-tls
          readOnly: true
      restartPolicy: Always
      schedulerName: default-scheduler
      nodeSelector:
        role: node
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: node
                app.kubernetes.io/instance: valkey
                app.kubernetes.io/name: valkey
            topologyKey: kubernetes.io/hostname
      securityContext:
        fsGroup: 999
        runAsNonRoot: true
        runAsUser: 999
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/component: node
            app.kubernetes.io/instance: valkey
            app.kubernetes.io/name: valkey
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - name: users-secret
        secret:
          defaultMode: 256
          secretName: valkey-users-secret
      - configMap:
          defaultMode: 420
          name: valkey-config
        name: valkey-config
      - name: valkey-tls
        secret:
          defaultMode: 288
          secretName: valkey-server-tls
      - name: valkey-data
        emptyDir:
          sizeLimit: 8Gi
  updateStrategy:
    type: RollingUpdate
